style/summary_login/summary_responsive.css
@media (max-width: 1400px) {
    .summary-title {
        font-size: 50px;
    }

    .summary-subtext {
        font-size: 22px;
    }

    .summary-content-layout {
        gap: 3%;
    }

    .greeting-text {
        font-size: 40px;
    }

    .greeting-name {
        font-size: 50px;
    }

    .summary-greeting-section {
        margin-top: 150px;
    }
}

@media (max-width: 1170px) {
    .main-content {
        padding: 0px 32px;
    }

    .summary-title {
        font-size: 42px;
    }

    .summary-subtext {
        font-size: 18px;
    }

    .greeting-text {
        font-size: 34px;
    }

    .greeting-name {
        font-size: 42px;
    }

    .summary-greeting-section {
        margin-top: 120px;
    }
}

@media (max-width: 1150px) {
    .main-content {
        padding: 0px 15px;
        margin: 0 auto;

    }

    .summary-padding-top {
        padding-top: 60px;
    }

}

@media (max-width: 1025px) {
    .summary-greeting-section {
        display: none !important;
    }
}

@media (max-width: 800px) {
    .summary-cards-wrapper {
        max-width: 490px;
    }
}

@media (max-width: 767px) {
    .summary-padding-top {
        padding-top: 40px;
    }

    .summary-content-layout {
        margin-top: 10px;
    }

    .summary-cards-wrapper {
        margin-bottom: 110px;
    }

    .summary-container-height {
        height: 90px;
    }

}

@media (max-width: 510px) {
    .summary-number {
        font-size: 47px;
    }

    .summary-icon {
        width: 40px;
        height: 40px;
    }

    .padding-all-cards {
        padding: 10px;
    }

    .summary-cards-first-row:hover,
    .summary-cards-last-row:hover,
    .summary-card-second-row:hover {
        padding: 20px;
    }

    .number-label {
        font-size: 16px;
    }

    .urgent-icon {
        width: 40px;
    }

    .urgent-divider {
        height: 68px;
    }

    .urgent-date {
        font-size: 16px;
    }

    .summary-row {
        gap: 5px;
    }

    .summary-cards-wrapper {
        margin-bottom: 170px;
        max-width: 385px;
    }

    .summary-cards-first-row {
        gap: 5px;
    }
}

@media (max-width: 500px) {
    .summary-cards-wrapper {
        margin-bottom: 138px;
    }
}

@media (max-width: 410px) {
    .main-content {
        padding: 8px;
        margin: 0;
    }

    .summary-padding-top {
        padding-top: 0px;
    }

    .summary-cards-wrapper {
        width: 100%;
        height: 548px;
        margin: 0px -5px;
        gap: 20px;
        margin-bottom: 56px;
    }

    .summary-cards-last-row{
        width: calc(100% / 3);
        margin: 5px;
    }

    .summary-cards-first-row,
    .summary-card-second-row {
        margin: 5px;
    }

    .summary-cards-first-row:hover,
    .summary-cards-last-row:hover,
    .summary-card-second-row:hover {
        padding: 10px;
    }

    .contact-header-text {
        gap: 8px !important;
    }

    .summary-row {
        gap: 0px;
    }

    .summary-number {
        font-size: 36px;
    }

    .urgent-left {
        gap: 5px;
    }

    .urgent-icon {
        padding: 0;
    }

    .urgent-right {
        gap: 3px;
    }

    .padding-all-cards {
        padding: 5px;
    }

}

@media (max-width: 375px) and (max-height: 667px) {
    .summary-cards-wrapper {
        gap: 0px;
        margin-bottom: 0px;
        height: 364px;
    }

    .summary-content-layout {
        margin-top: 6px;
    }
}

